Fixed overlay on mobile and made buttons bigger on mobile

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -7,16 +7,6 @@ header {
   z-index: 2;
 }
 
-.overlay {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100vw;
-  height: 85vh;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1;
-}
-
 .header__container {
   display: flex;
   justify-content: space-between;
@@ -24,7 +14,16 @@ header {
   max-width: 95rem;
   margin: 0 auto;
   padding: 0.75rem;
-  z-index: 2;
+}
+
+.overlay {
+  position: fixed;
+  top: 5rem;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
 
 .logo {
@@ -196,7 +195,7 @@ nav {
   .nav__active {
     max-height: 15rem;
     padding-bottom: 1rem;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
     z-index: 2;
   }
