--- a/src/components/homeItems/HomeItems.module.css
+++ b/src/components/homeItems/HomeItems.module.css
@@ -188,6 +188,7 @@
 
   .item__details button {
     font-size: 1.8rem;
+    padding: 0.65rem;
   }
 }
 
