--- a/src/pages/cart/Cart.module.css
+++ b/src/pages/cart/Cart.module.css
@@ -239,10 +239,12 @@ main {
   .buttons__container > .button,
   .buttons__container > button {
     font-size: 1.8rem;
+    padding: 0.65rem;
   }
 
   .item__details button {
     font-size: 1.8rem;
+    padding: 0.65rem;
   }
 }
 
