--- a/src/pages/product/Product.module.css
+++ b/src/pages/product/Product.module.css
@@ -203,5 +203,6 @@
 
   .button__container button {
     font-size: 1.8rem;
+    padding: 0.65rem;
   }
 }
